[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Yunjue"
version = "0.1"
description = "Yunjue Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5, <1.0.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "jinja2>=3.1.3",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langgraph-checkpoint-postgres==2.0.21",
    "requests>=2.32.3",
    "langchain-core>=0.3.65, <1.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.3.3",
]

[tool.uv]
required-version = ">=0.6.15"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.report]
fail_under = 25

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
extend-include = ["*.pyi"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
exclude = ['^/build/']

